# driftshield

./: .env.example  .env.production.example  .gitignore  .vercelignore  AMM_INTEGRATION_GUIDE.md  BONDING_CURVE_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  DEPLOY_CHECKLIST.md  FINAL_UPDATE_SUMMARY.txt  ORACLE_QUICK_START.sh  POLYMARKET_AMM_PARAMS.md  PORTFOLIO_FEATURES.md  PRESENTATION_SCRIPT.md  QUICK_START.md  README.md  VERCEL_DEPLOYMENT.md  WHAT_YOU_HAVE.md  X402_IMPLEMENTATION.md  X402_SCAN_INTEGRATION.md  X402_SUMMARY.md  check-markets-onchain.ts  check-markets.ts  check-status.sh  complete-insurance-deploy.sh  compute-discriminators.js  convert-key.js  deploy-oracle-system.sh  deploy-with-anchor.sh  fix-permissions.sh  get-wallet-address.sh  middleware.ts  next.config.mjs  nixpacks.toml  package-lock.json  package.json  setup-x402.sh  start-local.sh  test-dates.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .env.example  .gitignore  BACKEND_QUICKSTART.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SHADOW_DRIVE_SETUP.md  docker-compose.yml  jest.config.js  package.json
components/: admin-resolution-panel.tsx  bonding-curve-widget.tsx  dashboard-nav.tsx  dispute-dialog.tsx  landing-nav.tsx  require-wallet.tsx  resolution-status-badge.tsx  scroll-animations.tsx  stats-ticker.tsx  (+2 more)
driftshield-programs/driftshield-programs/programs/insurance/: Cargo.toml
driftshield-programs/driftshield-programs/programs/insurance/src/: driftshield-ui.code-workspace  lib.rs
(+212 files in other folders)
