[package]
name = "insurance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insurance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = []
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
